[tool.poetry]
name = "kurs3"
version = "0.1.0"
description = "Третья курсовая в SkyPro"
authors = ["ph_oleg <ph_oleg@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
